# NinjaMonster

./: .dockerignore  .env.example  .gitignore  DESIGN_SYSTEM.md  Dockerfile  GAME_DESIGN_DOCUMENT.md  GAME_UX_TRACKER.md  PROGRESS.md  TACTICAL_SYSTEM_TRACKER.md  UI_UX_IMPROVEMENT_PLAN.md  UX_REDESIGN_TRACKER.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  start.sh  upload_kanto_audio.py  upload_pack_images.py
apps/effects/: admin.py  apps.py  constants.py  engine.py  models.py
apps/events/: admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/expedition/: models.py  services.py  urls.py  views.py
apps/game/: admin.py  ai.py  apps.py  consumers.py  fun.py  fun_views.py  models.py  routing.py  services.py  tutorial_service.py  urls.py  views.py
apps/guilds/: admin.py  apps.py  context_processors.py  models.py  services.py  urls.py  views.py
apps/pokemon/: admin.py  apps.py  models.py  querysets.py  services.py  signals.py  type_chart.py  urls.py  views.py
apps/quests/: admin.py  models.py  services.py  urls.py  views.py
apps/ranked/: models.py  services.py  urls.py  views.py
apps/stickers/: admin.py  apps.py  collection_stats.py  models.py  services.py  urls.py  views.py
apps/users/: achievement_service.py  adapters.py  admin.py  apps.py  context_processors.py  forms.py  guide_service.py  managers.py  models.py  services.py  urls.py  views.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  test.py
docs/: deprecated_features.md  economy_rebalance_phases.md  gen1_role_design.md
requirements/: base.txt  dev.txt  prod.txt
static/css/: NEW_PAGE_TEMPLATE.css  base.css  landing.css  theme.css
static/js/: games.js
static/samples/: style_a.html  style_b.html  style_c.html  style_d.html
templates/: base.html
templates/account/: login.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  signup.html
templates/events/: event_list.html
templates/expedition/: hub.html
templates/game/: ai_battle_create.html  battle_action.html  battle_create.html  battle_detail.html  battle_list.html  battle_log.html  coming_soon_game.html  fun_hub.html  home.html  loteria_board_builder.html  loteria_hub.html  loteria_lobby.html  loteria_results.html  loteria_room.html  memory_game.html  memory_hub.html  silhouette_hub.html  silhouette_tower.html  spectate.html  spectate_list.html  team_select.html  tutorial_complete.html  tutorial_starter_select.html
templates/guilds/: guild_album.html  guild_create.html  guild_detail.html  guild_list.html
templates/landing/: landing.html
templates/pokemon/: combo_atlas.html  combo_simulator.html  mi_casa.html  my_pokemon.html  owned_pokemon_detail.html  pokedex.html  pokemon_detail.html  team.html  team_slot_picker.html  type_chart.html
templates/quests/: quest_list.html
templates/ranked/: home.html  leaderboard.html
templates/registration/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  register.html
templates/stickers/: album.html  album_scene_index.html  album_scene_page.html  buy_pack.html  craft.html  dismantle.html  dust_convert.html  multi_pack_open.html  my_packs.html  pack_open.html  placement_mode.html  pokemon_album.html  regional_album_detail.html  regional_album_index.html  sticker_detail.html  sticker_generator.html  trade_create.html  trade_detail.html  trade_list.html  workshop.html
tests/: conftest.py
(+182 files in other folders)
